@@ -5,5 +5,6 @@
 #      operadores (parcialmente completado (ClonerX bots))
 #    Crear una funcion de "quotes" con comando remoto (¿a partir de la funcion
 #      de consejos?)
+#    Agregar soporte para amarok
 #
 ###############################################################################
